--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Disabledroid">
-        <activity android:name=".ChatbotActivity"></activity>
+        android:theme="@style/Theme.Disabledroid"
+        android:fullBackupContent="">
+        <activity android:name=".ChatbotActivity" />
         <activity android:name=".SavedPlanActivity" />
         <activity android:name=".SavedLocationActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".LocationActivity" />
         <activity android:name=".DayPlanActivity" />
         <activity android:name=".TodoActivity" />
-        <activity android:name=".FingerprintActivity">
+        <activity android:name=".FingerprintActivity"
+            android:exported="TODO">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
